--- a/public/index.html
+++ b/public/index.html
@@ -143,10 +143,10 @@
       <button type="submit">⬆️ Tải lên & Xử lý</button>
     </form>
 
-    <a class="download-template" 
+    <!-- <a class="download-template" 
        href="https://drive.google.com/uc?export=download&id=197gjQ0LBTPAjXu6I7dgboOTJ_17edkW3">
-      📥 Tải file mẫu kế hoạch
-    </a>
+      📥 Tải file mẫu kế hoạch (nếu chưa có)
+    </a> -->
 
     <a class="link-import" href="https://resource-bom.onrender.com/" target="_blank">
       💰 Đi tới trang Import Chi Phí
