--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement("a");
         a.href = url;
-        a.download = "Routing_result.xlsx";
+        a.download = "Routing_import.xlsx";
         a.click();
 
         msg.innerHTML = "✅ Xử lý thành công, file đã được tải về!";
