--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
 <body>
   <div class="upload-box">
     <h2>📦 Upload File Routing BOM của Kế Hoạch</h2>
+    <h4 style="color:red">Lưu ý trong file kế hoạch: Tại sheet YC XUẤT BOM phải xóa dòng các mã đã ẩn để lại những mã cần khai BOM</h4>
     <form id="uploadForm" enctype="multipart/form-data">
       <input type="file" name="file" accept=".xlsx, .xls" required />
       <br />
